--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "graphql-tag": "^2.5.0",
     "rxjs": "^5.5.2",
     "ts-loader": "^3.1.1",
+    "ts-node": "^6.0.1",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
